[package]
name = "bevy_editor_extras"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/rydb/bevy_editor_extras"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "A crate containing utilities to make a "

[dependencies]
bevy = { version = "0.11"}
bevy_mod_raycast = "0.13.1"
bevy-inspector-egui = "0.19.0"
rapier3d = "0.17.2"
bevy_rapier3d = "0.22.0"
glam = "0.24.0"
bevy_egui = "0.21.0"
bevy_window = "0.11.0"
egui = "0.22.0"
bevy_camera_extras = "0.1"
bevy_component_extras = "0.1"
bevy_ui_extras = "0.2.0"

[dev-dependencies]
bevy = {version = "0.11", features = ["dynamic_linking"]}


